--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		console.log(box);
 		target.addEventListener("touchstart",function(e){
 			target.innerHTML=e.targetTouches.length;
-			box.innerHTML=e.changeTouches.length;
+			box.innerHTML=e.changedTouches.length;
 		})
 	</script>
 </html>
